fixed alignment of lists and text. fixed nightmode in notemaking strategies

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,15 @@ h3 {
   word-spacing: .3rem;
 }
 
+ul {
+  text-align: left;
+}
+
+p {
+  text-align: left;
+}
+
+
 p, strong, em {
   font-size:16px ;
   font-family:arial ;
